# teleport-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  flake.nix  package-lock.json  package.json
.cargo/: config.toml
.claude/skills/teleport-rust/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/teleport/: Cargo.toml
crates/teleport-build/: Cargo.toml
crates/teleport-build/src/: adapter.rs  client.rs  config.rs  errors.rs  lib.rs  naming.rs  ts_utils.rs  typescript.rs
crates/teleport-build/tests/: data_types.rs  snapshots.rs
crates/teleport-build/tests/snapshots/: snapshots__generated_client_ts.snap  snapshots__generated_errors_ts.snap  snapshots__generated_index_ts.snap  snapshots__generated_types_ts.snap
crates/teleport-cli/: Cargo.toml
crates/teleport-cli/src/: main.rs
crates/teleport-cli/tests/fixtures/: mini.contract.json
crates/teleport-contract/: Cargo.toml
crates/teleport-contract/src/: lib.rs
crates/teleport-core/: Cargo.toml
crates/teleport-core/src/: lib.rs
crates/teleport-macros/: Cargo.toml
crates/teleport-macros/src/: lib.rs  remote.rs  teleport_type.rs  utils.rs
crates/teleport/src/: auth.rs  bigint.rs  error.rs  extractors.rs  lib.rs  private.rs  procedure.rs  router.rs
crates/teleport/tests/: export.rs  extractors.rs  http.rs  remote.rs  teleport_type.rs
crates/teleport/tests/compile-fail/: bad_return_type.rs  bad_return_type.stderr  bare_bigint_return.rs  bare_bigint_return.stderr  conflicting_attrs.rs  conflicting_attrs.stderr  invalid_auth_attr.rs  invalid_auth_attr.stderr  missing_async.rs  missing_async.stderr  missing_state_ref.rs  missing_state_ref.stderr  mount_without_state.rs  mount_without_state.stderr  no_procedure_type.rs  no_procedure_type.stderr  self_param.rs  self_param.stderr
docs/: architecture.md  error-handling.md  feature-flags.md  getting-started.md  security.md
docs/internal/: 00-overview.md  01-architecture.md  02-rust-api.md  03-error-handling.md  04-ts-client.md  05-auth.md  06-build-pipeline.md  07-file-structure.md  09-decisions.md  11-lessons-learned.md  12-dx-audit.md
dotnet/: Directory.Build.props  README.md  Teleport.Net.sln
dotnet/examples/Teleport.Net.Demo/: DemoApi.cs  DemoModel.cs  Program.cs  Teleport.Net.Demo.csproj
dotnet/src/Teleport.Net/: Attributes.cs  Contracts.cs  Exporter.cs  Teleport.Net.csproj
dotnet/src/Teleport.Net.AspNetCore/: Discovery.cs  EndpointExtensions.cs  GlobalUsings.cs  RequestParsing.cs  Teleport.Net.AspNetCore.csproj  TeleportEndpointOptions.cs
dotnet/tests/Teleport.Net.AspNetCore.TestFixtures/: RuntimeOnlyFixtures.cs  Teleport.Net.AspNetCore.TestFixtures.csproj
dotnet/tests/Teleport.Net.AspNetCore.Tests/: DiscoveryTests.cs  HttpBehaviorTests.cs  Teleport.Net.AspNetCore.Tests.csproj
dotnet/tests/Teleport.Net.TestFixtures/: Fixtures.cs  Teleport.Net.TestFixtures.csproj
dotnet/tests/Teleport.Net.Tests/: ContractSurfaceTests.cs  ExporterTests.cs  Teleport.Net.Tests.csproj
examples/demo/: Cargo.toml
examples/demo/frontend/: .gitignore  package.json  vite.config.ts
examples/demo/frontend/src/lib/api/: config.ts  index.ts
examples/demo/frontend/src/lib/server/: data.remote.ts
examples/demo/frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
examples/demo/frontend/src/routes/auth/login/: +page.server.ts  +page.svelte
examples/demo/frontend/src/routes/profile/: +page.server.ts  +page.svelte
examples/demo/src/: main.rs  state.rs  types.rs
examples/demo/src/api/: auth.rs  posts.rs  users.rs
examples/starter/: Cargo.toml
examples/starter/src/: main.rs
go/: README.md  go.mod
go/examples/demo/: main.go
go/teleport/: contract.go  contract_result_test.go  export_test.go  procedure.go  procedure_internal_test.go  result.go  types.go  types_internal_test.go
go/teleporthttp/: router.go  router_internal_test.go  router_test.go
plan/: 02-rust-api.md  05-auth.md  07-file-structure.md  08-phases.md  09-decisions.md  10-examples.md  12-dx-audit.md
scripts/: check-contract-parity.mjs  coverage-dotnet.sh  coverage-go.sh  coverage-rust.sh  package-publishable-crates.sh
