[workspace]
members = [
    "crates/teleport",
    "crates/teleport-core",
    "crates/teleport-macros",
    "crates/teleport-build",
    "examples/demo",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.91"

[workspace.dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "=0.0.11"
tokio = { version = "1", features = ["full"] }
http = "1"
inventory = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
