[workspace]
members = [
    "crates/teleport",
    "crates/teleport-core",
    "crates/teleport-macros",
    "crates/teleport-build",
    "examples/demo",
    "examples/starter",
]
resolver = "3"

[workspace.package]
edition = "2024"
# MSRV — enforced by CI's `msrv` job. Constrained to 1.93 because
# `specta 2.0.0-rc.24` uses `fmt::from_fn` (stabilized in Rust 1.93).
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/jvz-devx/teleport-rs"
homepage = "https://github.com/jvz-devx/teleport-rs"
authors = ["teleport-rs contributors"]

[workspace.dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "=0.0.11"
tokio = { version = "1", features = ["full"] }
http = "1"
inventory = "0.3"
tower-http = { version = "0.6", features = ["cors", "limit", "catch-panic"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
