[package]
name = "teleport-cli"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Shared contract-driven CLI tooling for the teleport family."
readme = "../../README.md"

[[bin]]
name = "teleport-cli"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
teleport-build = { version = "1.0.0", path = "../teleport-build" }

[dev-dependencies]
tempfile = "3"
