[package]
name = "teleport-contract"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Language-neutral contract bundle for teleport family implementations."
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
