[package]
name = "teleport"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
specta = { workspace = true }
inventory = { workspace = true }
teleport-core = { path = "../teleport-core" }
teleport-macros = { path = "../teleport-macros" }
teleport-build = { path = "../teleport-build", optional = true }

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
teleport-build = { path = "../teleport-build" }
specta-typescript = { workspace = true }
tempfile = "3"
trybuild = "1"
tower = { version = "0.5", features = ["util"] }
http = { workspace = true }

[features]
default = []
debug-manifest = []
export = ["dep:teleport-build"]
