[package]
name = "teleport"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Rust-to-TypeScript RPC framework. Annotate functions with #[remote], get a type-safe TS client."
readme = "../../README.md"
keywords = ["rpc", "typescript", "axum", "codegen", "specta"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
axum = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
specta = { workspace = true }
inventory = { workspace = true }
tower-http = { workspace = true }
teleport-core = { version = "1.0.0", path = "../teleport-core" }
teleport-macros = { version = "1.0.0", path = "../teleport-macros" }
teleport-build = { version = "1.0.0", path = "../teleport-build", optional = true }

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
teleport-build = { version = "1.0.0", path = "../teleport-build" }
specta-typescript = { workspace = true }
tempfile = "3"
trybuild = "1"
tower = { version = "0.5", features = ["util"] }
http = { workspace = true }

[features]
default = []
debug-manifest = []
export = ["dep:teleport-build"]
