[package]
name = "teleport-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "export"
path = "src/bin/export.rs"

[dependencies]
teleport = { path = "../../crates/teleport" }
teleport-build = { path = "../../crates/teleport-build" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
