[package]
name = "teleport-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
teleport = { path = "../../crates/teleport", features = ["export"] }
axum = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
tower-http = { workspace = true }
