[package]
name = "teleport-starter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "teleport-starter"
path = "src/main.rs"

[dependencies]
teleport = { path = "../../crates/teleport", features = ["export"] }
axum = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
tower-http = { workspace = true }
